# dorado-sphinx-theme

./: MANIFEST.in  setup.cfg  setup.py
astropy_sphinx_theme/: __init__.py
astropy_sphinx_theme/bootstrap-astropy/: theme.conf
astropy_sphinx_theme/tests/: test_basic.py
